# pytanic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pytanic/: __init__.py  attribute_adder.py  binner.py  encoder.py  pytanic.py
tests/: test_pytanic.py
