[tool.poetry]
name = "pytanic"
version = "0.1.0"
description = "A package a GUI for making predictions on Titanic dataset."
authors = ["Arsen Poghosyan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
